# proxima-platform

./: .gitignore  README.md  pyproject.toml  setup-terraform-sa.sh
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml  prometheus.yml  ray.Dockerfile
.github/workflows/: build-workloads.yml  terraform.yml
docs/: DEV_GUIDE.md  GITHUB_ACTIONS.md  GITOPS.md  LAUNCH_PLATFORM.md  QUICKSTART.md  USE_PLATFORM.md  project_upgrade_plan.md
docs/examples/stellar_optimization/: Dockerfile  README.md  job.yaml  requirements.txt  train.py
gitops/apps/backstage/: application.yaml
gitops/apps/grafana/: application.yaml  external-secret.yaml  helm-release.yaml  kustomization.yaml
gitops/apps/kuberay-operator/: application.yaml
gitops/apps/prometheus/: application.yaml
gitops/argocd/: argocd-helm.yaml  bootstrap.yaml.tpl  root-applicationset.yaml
gitops/clusters/management-cluster/: namespaces.yaml
gitops/clusters/workload-cluster/: namespaces.yaml
gitops/infrastructure/cert-manager/: application.yaml
gitops/projects/: platform-team.yaml  workload-teams.yaml
kubernetes/base/: config.yaml  namespaces.yaml  rbac.yaml
kubernetes/monitoring/: README.md  alerts.yaml  dashboards.yaml
kubernetes/ray/: ray-cluster.yaml
ml_platform/: __init__.py
ml_platform/cli/: __main__.py  main.py
ml_platform/sdk/: __init__.py
platform/: __init__.py
platform/cli/: __init__.py  __main__.py  main.py
scripts/: check-argocd.sh  connect-clusters.sh
terraform/: .terraform.lock.hcl  setup-terraform-service-account.sh
terraform/envs/dev/: main.tf  (+6 more)
terraform/tests/: README.md  platform_test.tftest.hcl
(+40 files in other folders)
